tdf#126643: avoid unnecessary asking for JRE in script organizer dialog

Use two-pass search for the needed language node; if it fails with Java
interaction disabled, only then repeat the search with it enabled, like
in commit f3ce30ec75a4d7116b9cd4d7b21d9aaa0e237eeb.

Change-Id: Icde5dbeb552a6837af02182f7b8cbbc90765c5a5
Reviewed-on: https://gerrit.libreoffice.org/76831
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
(cherry picked from commit 1a1f4e73b7ab9e5b071aab74c8d7e27ba2b2d29c)